<resources>
    <string name="action_about_title">About FFUpdater</string>
    <string name="app_description">Updater for privacy friendly browsers</string>
    <string name="app_icon">app icon</string>
    <string name="app_name">FFUpdater</string>
    <string name="application_installation_was_not_successful">Application installation was not successful</string>
    <string name="application_successfully_installed">Application successfully installed</string>
    <string name="available_version">Available: %1$s</string>
    <string name="notification__error__text">Please report this error. Click to view the error report.</string>
    <string name="notification__error__title">Background update check failed</string>
    <string name="generic_beta__warning">- This is a beta app, designed for developers and testers. It may contain various bugs that can affect your experience.</string>
    <string name="brave__description">Privately browse the internet, for free! The Brave Private Browser App is your fast, free, and safe private web browser with ad blocker and pop-up blocker. Privately browse and search the internet without being tracked by advertisers, malware and pop-ups.</string>
    <string name="brave__title">Brave Private Browser</string>
    <string name="brave__warning">- Brave uses the technical foundation of Google Chrome and thus indirectly supports the monopoly position of the Chromium render engine.\n- Due to its Basic Attention Token BAT on the Ethereum blockchain the project has ties with cryptocurrency. Blockchains have many problems and should be avoided in my view.</string>
    <string name="brave_beta__description">Welcome to Brave Beta for Android!\nTry out the newest features and give early feedback: https://brave.com/msupport\nYou can install Brave Beta alongside your current version of Brave for Android.</string>
    <string name="brave_beta__title">Brave Browser (Beta)</string>
    <string name="brave_nightly__description">Welcome to Brave Nightly (Developer) for Android!\nTry out the newest features and give early feedback: https://brave.com/msupport\nYou can install Brave Nightly alongside your current version of Brave for Android.</string>
    <string name="brave_nightly__title">Brave Browser (Nightly)</string>
    <string name="bromite__description">Bromite aims at providing a no-clutter browsing experience without privacy-invasive features and with the addition of a fast ad-blocking engine. Minimal UI changes are applied to help curbing the idea of "browser as an advertisement platform".</string>
    <string name="bromite__title">Bromite</string>
    <string name="bromite__warning">- Bromite uses the technical foundation of Google Chrome and thus indirectly supports the monopoly position of the Chromium render engine.</string>
    <string name="bromite_systemwebview__description">The SystemWebView package contains the core browser/rendering engine of Bromite and its same features. It offers the possibility to replace the default browser component for the whole Android system.</string>
    <string name="bromite_systemwebview__title">Bromite SystemWebView</string>
    <string name="crash_report__copy_crash_report_to_clipboard">Copy crash report to clipboard</string>
    <string name="install_activity__download_file_failed__crash_text">The following error occurred during download. If this error occurs frequently, feel free to submit the crash report to notabug.org, GitHub or GitLab.</string>
    <string name="crash_report__explain_text__download_activity_fetching_url">This error occurred when the download metadata was fetched. If this error occurs frequently, feel free to submit the crash report to notabug.org, GitHub or GitLab.</string>
    <string name="crash_report__explain_text__download_activity_install_file">This error occurred during installation. If this error occurs frequently, feel free to submit the crash report to notabug.org, GitHub or GitLab.</string>
    <string name="crash_report__explain_text__download_activity_update_check">This error occurred when checking for updates in the main view. If this error occurs frequently, feel free to submit the crash report to notabug.org, GitHub or GitLab.</string>
    <string name="crash_report__explain_text__uncaught_throwable">Unfortunately, FFUpdater crashed last time and logged this error. Please submit the crash report to notabug.org, GitHub or GitLab.</string>
    <string name="crash_report__go_to_github">Go to GitHub</string>
    <string name="crash_report__go_to_gitlab">Go to GitLab</string>
    <string name="crash_report__got_to_notabug_org">Go to notabug.org</string>
    <string name="default_theme_preference" translatable="false">3</string>
    <string name="notification__download_error__channel_descr">Shows when update downloads in the background fail.</string>
    <string name="notification__download_error__channel_name">Notification about download errors in the background</string>
    <string name="notification__download_error__descr">The background download of the %1$s update failed. If this error occurs frequently, feel free to report it on notabug.org, GitHub or GitLab.</string>
    <string name="notification__download_error__text">The background download of the %1$s update failed. If this error occurs frequently, click here to view the error report.</string>
    <string name="notification__download_error__title">Background download of update failed</string>
    <string name="notification__download_running__channel_descr">Shows when app updates are downloaded in the background.</string>
    <string name="notification__download_running__channel_name">Notification about downloads in the background</string>
    <string name="notification__download_running__title">Downloading app updates</string>
    <string name="app_card__download_the_app">download the app</string>
    <string name="notification__eol_apps__channel_description">Notification channel for warnings about outdated apps.</string>
    <string name="notification__eol_apps__channel_name">Outdated apps notification</string>
    <string name="notification__eol_apps__text">You have outdated apps which should not be used anymore: %1$s</string>
    <string name="notification__eol_apps__title">Outdated apps installed</string>
    <string name="notification__error__channel_descr">Show errors of the background update checker</string>
    <string name="notification__error__channel_name">Background errors</string>
    <string name="firefox_beta__description">Firefox Browser for Android is automatically private and incredibly fast. Thousands of online trackers are following you every day, collecting information about where you go online and slowing down your speed. Firefox blocks over 2000 of these trackers by default and there are ad blocker add-ons available if you want to customize your browser even more. With Firefox, you’ll get the security you deserve and the speed you need in a private, mobile browser.</string>
    <string name="firefox_beta__title">Firefox for Android Beta</string>
    <string name="firefox_focus__description">This is a modification of the Firefox browser aimed to increase privacy.</string>
    <string name="firefox_focus__title">Firefox Focus</string>
    <string name="firefox_klar__description">Firefox Klar is developed for Germany, Austria and Switzerland, but can be used by users in any country. It is very similar to Firefox Focus, but the name was changed in German-speaking countries to avoid confusion with the magazine Focus by Hubert Burda Media group. Unlike Firefox Focus, Firefox Klar has telemetry disabled by default due to strict German privacy laws.</string>
    <string name="firefox_klar__title">Firefox Klar</string>
    <string name="firefox_nightly__description">Please note that this app used to be titled Firefox Preview. It has now been transitioned to Firefox Nightly. \n\nFirefox Nightly is a developmental channel for new Mozilla Firefox releases. \n\nFirefox Nightly is designed to showcase the more experimental builds of Firefox. The Nightly channel allows users to experience the newest Firefox innovations in an unstable environment and provide feedback on features and performance to help determine what makes the final release.</string>
    <string name="firefox_nightly__title">Firefox Nightly</string>
    <string name="firefox_release__description">Firefox Browser for Android is automatically private and incredibly fast. Thousands of online trackers are following you every day, collecting information about where you go online and slowing down your speed. Firefox blocks over 2000 of these trackers by default and there are ad blocker add-ons available if you want to customize your browser even more. With Firefox, you’ll get the security you deserve and the speed you need in a private, mobile browser.</string>
    <string name="firefox_release__title">Firefox Browser</string>
    <string name="firefox_release__warning">- An improved version of Firefox is also available on F-Droid under the name "Fennec F-Droid".</string>
    <string name="iceraven__description">Definitely not brought to you by Mozilla! \n\nIceraven Browser is a web browser for Android, based on Mozilla\'s Fenix version of Firefox, GeckoView and Mozilla Android Components. \n\nOur goal is to be a close fork of the new Firefox for Android that seeks to provide users with more options, more opportunities to customize (including a broad extension library), and more information about the pages they visit and how their browsers are interacting with those pages.</string>
    <string name="iceraven__title">Iceraven Browser</string>
    <string name="iceraven__warning">- The maintainer gives no warranties or guarantees of security or updates or even stability.\n - The project takes longer than usual to provide security updates.</string>
    <string name="app_card__information_about_the_app">Information about the app</string>
    <string name="kiwi__warning">- Kiwi is only partial open-source
\n- Kiwi uses the technical foundation of Google Chrome and thus indirectly supports the monopoly position of the Chromium render engine.
\n- Kiwi is not an ideal privacy browser but has a good addon support.
\n- The browser is getting paid by search engines for every search done using Kiwi Browser. Depending on the search engine choice, requests may go via Kiwibrowser / Kiwisearchservices servers.
\n- Google Ads in Kiwi may use the location data for ads - but you can disable it by disabling the Discovery feature. But this will soon change. See https://privacy.kiwibrowser.org/ for more details.</string>
    <string name="cardview_dialog__self_description_label">Self description:</string>
    <string name="cardview_dialog__warnings_label">Warnings:</string>
    <string name="cardview_dialog__auto_bg_update">Automatic background update</string>
    <string name="cardview_dialog__exit">Close</string>
    <string name="cardview_dialog__install">Install latest version</string>
    <string name="cardview_dialog__different_signature">FFUpdater can not update this app because the APK signature is different. You can fix it by uninstalling the app and reinstalling it with FFUpdater. However, this will delete all your data in the app. So remember to back up your data beforehand.</string>
    <string name="cardview_dialog__eol">This app should no longer be used:</string>
    <string name="cardview_dialog__not_installed_by_ffupdater">This app was not installed or updated by FFUpdater. To avoid conflicts with other applications, automatic updating is disabled.</string>
</resources>