<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_dialog__title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:id="@+id/cardview_dialog__url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autoLink="web" />

                <TextView
                    android:id="@+id/cardview_dialog__eol_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cardview_dialog__eol"
                    android:textColor="@color/crash_report__error_red"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/cardview_dialog__not_installed_by_ffupdater_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cardview_dialog__not_installed_by_ffupdater"
                    android:textColor="@color/crash_report__error_red"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/cardview_dialog__eol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/crash_report__error_red"
                    android:autoLink="web"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/cardview_dialog__different_signature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cardview_dialog__different_signature"
                    android:textColor="@color/crash_report__error_red"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cardview_dialog__self_description_label"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/cardview_dialog__description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:autoLink="web" />

                <TextView
                    android:id="@+id/cardview_dialog__warnings_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/cardview_dialog__warnings_label"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/cardview_dialog__warnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:layout_marginTop="4dp" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/cardview_dialog__auto_bg_updates_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:text="@string/cardview_dialog__auto_bg_update" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardview_dialog__exit_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cardview_dialog__exit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardview_dialog__install_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_dialog__install" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>