<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crash_report__root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".crash.CrashReportActivity"
    tools:ignore="PrivateResource">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/crash_report_activity__main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/crash_report__explanation_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/crash_report__explain_text__uncaught_throwable" />

            <Button
                android:id="@+id/crash_report__copy_error_message_to_clipboard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/crash_report__copy_crash_report_to_clipboard" />

            <Button
                android:id="@+id/crash_report__got_to_notabug_org_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/crash_report__got_to_notabug_org" />

            <Button
                android:id="@+id/crash_report__got_to_github_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/crash_report__go_to_github" />

            <Button
                android:id="@+id/crash_report__got_to_gitlab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/crash_report__go_to_gitlab" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#1E000000" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/crash_report__exception_stack_trace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true" />

                    <TextView
                        android:id="@+id/crash_report__exception_logs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>