<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/cardview_dialog__title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:id="@+id/cardview_dialog__url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autoLink="web" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:text="@string/cardview_dialog__self_description_label" />

                <TextView
                    android:id="@+id/cardview_dialog__description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/cardview_dialog__warnings_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:text="@string/cardview_dialog__warnings_label" />

                <TextView
                    android:id="@+id/cardview_dialog__warnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/kiwi__warning" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/cardview_dialog__exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cardview_dialog__exit" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/cardview_dialog__install_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_install_info_dialog__install" />

        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>