<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:tag="appCard"
    app:cardBackgroundColor="@color/main_activity__cardview_background_color"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_icon"
            android:tag="appIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appTitle"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="start"
            android:tag="appCardTitle"
            app:layout_constraintEnd_toStartOf="@id/info_button"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_card__information_about_the_app"
            android:tag="appInfoButton"
            app:layout_constraintEnd_toEndOf="@id/appDownloadButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info_outline_blue" />

        <TextView
            android:id="@+id/appInstalledVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:tag="appInstalledVersion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:id="@+id/appAvailableVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:tag="appAvailableVersion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appInstalledVersion" />

        <ImageButton
            android:id="@+id/appDownloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_card__download_the_app"
            android:tag="appDownloadButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_file_download_orange" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>